--- a/src/app/_components/projects/projects.component.scss
+++ b/src/app/_components/projects/projects.component.scss
@@ -19,24 +19,19 @@
 .projects {
     flex: 1;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: 130px;
+    grid-template-columns: repeat(5, 1fr);
+    // grid-auto-rows: 130px;
     grid-gap: 5px;
     width: 100%;
     padding: 0 5px;
     box-sizing: border-box;
 
     @media #{$size-tablet} {
-        height: -moz-max-content;
-        height: max-content;
         padding: 5px;
         max-height: 300px;
         overflow: hidden;
+        grid-template-columns: repeat(1, 1fr);
 
-        & > * {
-            grid-row: span 1 !important;
-            grid-column: span 4 !important;
-        }
     }
 
 
@@ -55,24 +50,22 @@
         }
 
         &--sm { 
-            grid-row: span 1;
-            grid-column: span 1;
-        }
-        &--med { 
-            grid-row: span 2; 
-            grid-column: span 2; 
+            grid-row: span 2;
+            grid-column: span 2;
         }
         &--lg { 
-            grid-row: span 2; 
+            grid-row: span 4; 
             grid-column: span 3; 
         }
         &--long { 
-            grid-row: span 1; 
-            grid-column: span 2; 
+            grid-row: span 2; 
+            grid-column: span 1; 
         }
-        &--row { 
-            grid-row: span 1; 
-            grid-column: span 4; 
+
+
+        @media #{$size-tablet} {
+            grid-row: span 1 !important;
+            grid-column: span 1 !important;
         }
     }
 }
