--- a/src/app/_components/sidebar/sidebar.component.scss
+++ b/src/app/_components/sidebar/sidebar.component.scss
@@ -5,50 +5,25 @@
     position: relative;
     width: 100%;
 
-    .btnNext {
-        display: none;
-        text-indent: 2.5px;
-        margin: 0 auto;
-    }
-
-    @media #{$size-tablet} {
-        .btnNext {
-            position: relative;
-            bottom: 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 15px;
-            background: grey;
-            content: "\23F7";
-            width: 50px;
-            height: 50px;
-            color: #1b1b1b;
-            font-size: 1.3em;
-            border-radius: 50%;
-            &:hover {
-                background: $secondaryColour;
-            }
-        }
-    }
-
 
     .color-box {
-        position: relative;
+        position: absolute;
         background: $highlightColour;
         width: 100%;
-        height: 150px;
+        height: 15vw;
 
         @media #{$size-tablet} {
-            height: 50vh;
+            top: -45vw;
+            height: 66vw;
         }
     }
     .content {
         position: relative;
-        top: -143px;
+        // top: -143px;
+        top: calc(15vw / 2);
 
         @media #{$size-tablet} {
-            top: -25vh;
+            top: 0;
         }
     }
 
@@ -60,7 +35,7 @@
         max-width: 15vw;
         padding-top: 15vw;
         height: 0;
-        margin: 35px auto 10px auto;
+        margin: 0 auto 10px auto;
         border-radius: 50%;
         // overflow: hidden;
 
@@ -69,7 +44,7 @@
             max-width: 45vw;
             padding-top: 45vw;
             margin: 0 auto;
-            margin-bottom: 30px;
+            // margin-bottom: 15vw;
         }
 
         &__image {
@@ -79,7 +54,7 @@
             width: 110%;
 
             @media #{$size-tablet} {
-                top: -22.5vh;
+                top: -23.5vw;
             }
         }
     }
